--- a/sass/theme/_single-product-page_theme.scss
+++ b/sass/theme/_single-product-page_theme.scss
@@ -3,7 +3,7 @@
         align-items: center;
         display: flex;
         flex-direction: column;
-        margin-top: 1.5rem;
+        margin-top: 0;
 
         .btn-primary {
             font-size: 2rem!important;
